--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap 5 | Kupid R</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- main style here -->
+    <link rel="stylesheet" href="./assets/style/style.css" />
+    <!-- custom style here -->
+    <link rel="stylesheet" href="./assets/style/color.css" />
   </head>
   <body>
     <!-- start body code  -->
@@ -31,6 +34,7 @@
             <ul>
               <li><a class="btn" href="#all">ALL</a></li>
               <li><a class="btn" href="#" id="install">install</a></li>
+              <li><a class="btn" href="#" id="color">color</a></li>
             </ul>
           </nav>
         </div>
