--- a/index.html
+++ b/index.html
@@ -7,42 +7,14 @@
     <title>Bootstrap 5 | Kupid R</title>
     <!-- main style here -->
     <link rel="stylesheet" href="./assets/style/style.css" />
-    <!-- custom style here -->
-    <link rel="stylesheet" href="./assets/style/color.css" />
   </head>
   <body>
     <!-- start body code  -->
-    <!-- start header area  -->
-    <header>
-      <div class="container">
-        <h1>
-          Bootstrap <sub>v</sub>5
-        </h1>
-      </div>
-    </header>
-    <!-- end header area  -->
-    <!-- start main content  -->
+    <header></header>
     <div class="container">
-      <div class="left-side">
-        <div class="profile">
-          <a href="https://kupidr.com" target="_blank"
-            ><img src="./assets/images/kupidr.png" alt=""
-          /></a>
-        </div>
-        <div class="nav-bar">
-          <nav>
-            <ul>
-              <li><a class="btn" href="#all">ALL</a></li>
-              <li><a class="btn" href="#" id="install">install</a></li>
-              <li><a class="btn" href="#" id="color">color</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <!-- here includes all card powered by JavaScript -->
-      <div class="right-side"></div>
+      <aside></aside>
+      <main class="right-side"></main>
     </div>
-    <!-- end main content  -->
     <!-- end body code  -->
     <script type="module" src="assets/js/app.js"></script>
   </body>
