--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       <main class="right-side"></main>
     </div>
     <!-- end body code  -->
-    <script type="module" src="assets/js/app.js"></script>
+    <script type="module" src="./assets/js/app.js"></script>
   </body>
 </html>
