fix some code 7

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header></header>
     <div class="container">
       <aside></aside>
-      <main class="right-side"></main>
+      <main></main>
     </div>
     <!-- end body code  -->
-    <script type="module" src="./assets/js/app.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
